# src/index.ts
@@ -1,10 +1,9 @@
 import express, { type Request, type Response } from "express"; 
 import swaggerRouter from "./routes/swagger.router.js";
 import cors from "cors"
-import pool from "./config/db.js";
+import productosRouter from "./routes/product.routes.js";
+
 const port = process.env.PORT; 
-
-
 
 const app = express();
 
@@ -13,7 +12,7 @@ app.use(express.json());
 app.use(cors())
 
 app.use("/api/docs", swaggerRouter) 
-
+app.use("/api", productosRouter)
 
 app.get("/", (req: Request, res: Response) => {
     /*#swagger.tags = ['Tests']*/
@@ -21,17 +20,6 @@ app.get("/", (req: Request, res: Response) => {
         status: "Server online",
         version: "1.0.0"
     });
-});
-
-app.get("/api/menu", async (req: Request, res: Response) => {
-    /*#swagger.tags = ['Menu']*/
-    try {
-        const result = await pool.query("SELECT * FROM products");
-        res.json(result.rows);
-    } catch (error) {
-        console.error(error);
-        res.status(500).json({ error: "Error al obtener el menú" });
-    }
 });
 
 app.listen(port, () => {
